# 5073_tasca03

./: README.md  pyproject.toml
5073_tasca03/: client.ipynb  entrega.ipynb  predict_service.py  regresion_logistica.pck
5073_tasca03/models/: dt.pck  svm.pck
