[tool.poetry]
name = "5073-tasca03"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
ipykernel = "^6.28.0"
matplotlib = "^3.8.2"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
